fix login page overflow styling bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,39 +60,43 @@ ul {
   height: 100%;
   position: absolute;
   background-color: var(--clr-pry);
-
-  display: grid;
-  grid-template-columns: 1fr 1fr; 
   border-radius: 1rem;
-  
   border: solid 0.5rem var(--clr-white);
-  display: block;
+  display: grid;
+  grid-template-columns: 50% auto;
+  grid-template-rows: 100%;
+  overflow: hidden;
+}
+#right-side {
+  background-color: var(--clr-pry);
+  height: 100%;
+  position: relative;
+  display: grid;
+  place-items: center;
+}
+#right-side::before {
+  content: "";
+  position: absolute;
+  width: 70%;
+  height: 70%;
+  background-color: var(--clr-secondary);
+  opacity: 0.2;
+  border-radius: 42% 58% 79% 21% / 77% 56% 44% 23%;
+}
+.form-logo {
 }
 .article-title {
   margin: 1rem 0;
   color: var(--clr-pry);
 }
-#login-page {
-  display: block;
- 
-  
-  
-}
 
-#right-side {
-   
-  background-color: var(--clr-pry);
-  
-  border-radius: 0.5rem 0 0 0.5rem;
-}
 .login-form {
   height: 100%;
-  border-radius: 0 0.5rem 0.5rem 0;
   background-color: var(--clr-secondary);
   padding: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 0.5rem;
 }
 .input-field {
   width: 100%;
